force-app/main/default/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Createdvscloseddate__c</fullName>
        <formula>CreatedDate - Closed_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Createdvscloseddate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Currently_in_Marketing_Flow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Currently in Marketing Flow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Received_from_Findforsikring_dk__c</fullName>
        <label>Date Received from Findforsikring.dk</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_and_time_of_obl_end_and_call_record__c</fullName>
        <description>This field will auto populate when the sales rep checks the &quot;Obl ending and call record permission&quot; checkbox</description>
        <label>Date and time of obl end and call record</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_of_Reference__c</fullName>
        <label>Date of Reference</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Dato_for_booking__c</fullName>
        <inlineHelpText>Dato for hvornår emnet er videregivet</inlineHelpText>
        <label>Dato for videregivelse</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_to_Close_Lecture__c</fullName>
        <formula>IF(
  ISBLANK(Foredragsdato__c),
  NULL,
  MAX(
    0,
    IF(
      ISBLANK(Closed_Date__c),
      TODAY() - Foredragsdato__c,
      DATEVALUE(Closed_Date__c) - Foredragsdato__c
    )
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculates the days between Foredragsdato and Closed Date. If Closed Date is not yet set, it uses &quot;TODAY&quot; instead. Cannot go below 0.</inlineHelpText>
        <label>Days to Close (Lecture)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dedicated_owner__c</fullName>
        <label>Dedicated owner</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sofus</fullName>
                </value>
                <value>
                    <fullName>Phillip</fullName>
                </value>
                <value>
                    <fullName>Line</fullName>
                </value>
                <value>
                    <fullName>Lars</fullName>
                </value>
                <value>
                    <fullName>Stig</fullName>
                </value>
                <value>
                    <fullName>Ronnie</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Default_Price_Book__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Price Book</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deltager_I_begge_til_m_det__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deltager I begge til mødet?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Digital_Lecture_Form_through_QR_Code__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Digital Lecture Form through QR-Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Donationlead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Donationlead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Duplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duplicate_of__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Duplicate of</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ejendomsoverdragelse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ejendomsoverdragelse</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ejer_du_fast_ejendom__c</fullName>
        <label>Ejer du/I fast ejendom?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ja</fullName>
                </value>
                <value>
                    <fullName>Nej</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ejer_eller_lejer_Calendly__c</fullName>
        <label>Ejer eller lejer? (Calendly)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enter value</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ekstern_r_dgiver__c</fullName>
        <label>Ekstern rådgiver</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Jonatan Bolin</fullName>
                </value>
                <value>
                    <fullName>Andy</fullName>
                </value>
                <value>
                    <fullName>Danny</fullName>
                </value>
                <value>
                    <fullName>Emilia</fullName>
                </value>
                <value>
                    <fullName>Anton J</fullName>
                </value>
                <value>
                    <fullName>Denis</fullName>
                </value>
                <value>
                    <fullName>Sofus</fullName>
                </value>
                <value>
                    <fullName>Flemming Abildtrup</fullName>
                </value>
                <value>
                    <fullName>Michael Jepsen</fullName>
                </value>
                <value>
                    <fullName>Tina Lundquist</fullName>
                </value>
                <value>
                    <fullName>Rasmus Wedell</fullName>
                </value>
                <value>
                    <fullName>Kristian Holdt</fullName>
                </value>
                <value>
                    <fullName>Line Barfoed</fullName>
                </value>
                <value>
                    <fullName>Flemming Stelling</fullName>
                </value>
                <value>
                    <fullName>Bo Rathsach</fullName>
                </value>
                <value>
                    <fullName>Fatih Tamer</fullName>
                </value>
                <value>
                    <fullName>Timm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email2__c</fullName>
        <description>Secondary email address</description>
        <label>Email2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Invite_Status__c</fullName>
        <label>Email Invite Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Invite sent</fullName>
                </value>
                <value>
                    <fullName>Reply received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Er_der_f_lles_ellers_sammenbragte_b_rn__c</fullName>
        <label>Er der fælles ellers sammenbragte børn?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Item #1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Er_du_selvst_ndig__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Er du selvstændig?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimeret_samlet_v_rdi_for_boet__c</fullName>
        <label>Estimeret samlet værdi for boet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Event_DateTime__c</fullName>
        <label>Event DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Status__c</fullName>
        <label>Event Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Venue__c</fullName>
        <label>Event Venue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_moedestatus_c__c</fullName>
        <description>Used to show whether a lead has been met (show) or not attended ( No show) an event</description>
        <label>Event mødestatus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Booked</fullName>
                </value>
                <value>
                    <fullName>Order cancelled</fullName>
                </value>
                <value>
                    <fullName>Event Cancelled</fullName>
                </value>
                <value>
                    <fullName>Show</fullName>
                </value>
                <value>
                    <fullName>No show</fullName>
                </value>
                <value>
                    <fullName>Tilmeldingsblanket</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expired_Lecture_Form_Submission__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field is set by an administrator, if the customer has previously submitted a &quot;Tilmeldingsblanket&quot;, but has since booked tickets for a new lecture</inlineHelpText>
        <label>Expired Lecture Form Submission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FBCLID__c</fullName>
        <label>FBCLID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FM_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>F&amp;M Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Featured_Advisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Featured Advisor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fejls_gning_Calendly__c</fullName>
        <description>Dette felt bliver udfyldt med en statisk værdi fra hvert flow, for at finde ud af hvilket flow der smider forkert data afsted.</description>
        <label>Fejlsøgning (Calendly)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fixed_discount_Type__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Fixed Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FlowTrigger_Create_Ticket__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FlowTrigger: Create Ticket</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Foredrag_F_rdigt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Foredrag Færdigt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Foredragsdato__c</fullName>
        <label>Foredragsdato</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Foredragsdatovscloseddate__c</fullName>
        <formula>Foredragstid_og_dato__c - Closed_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Foredragsdatovscloseddate</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Foredragsevent_created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Foredragsevent created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Foredragskommentar__c</fullName>
        <inlineHelpText>The note will be cut off if it is too long. You can find the full not under &quot;Campaign History&quot; and the relevant lecture.</inlineHelpText>
        <label>Foredragskommentar</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Foredragstid_og_dato__c</fullName>
        <label>Foredragstid og dato</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Foredragstype__c</fullName>
        <label>Foredragstype</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Fysisk</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Forsikring_Sendt_til_Honestus__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Emnet er sendt til Honestus med henblik på forsikring</description>
        <inlineHelpText>Emnet er sendt til Honestus med henblik på forsikring</inlineHelpText>
        <label>Forsikring - Sendt til Honestus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Forsikring_StatusRed__c</fullName>
        <formula>IF( Forsikring_Sendt_til_Honestus__c = TRUE, IF(ISBLANK(TEXT( Forsikring_Status_Honestus__c )),&quot;Afventer&quot;,TEXT( Forsikring_Status_Honestus__c )),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forsikring - StatusRed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forsikring_Status_Honestus__c</fullName>
        <label>Forsikring - Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Afventer</fullName>
                    <default>true</default>
                    <label>Afventer</label>
                </value>
                <value>
                    <fullName>Godkendt</fullName>
                </value>
                <value>
                    <fullName>Ikke godkendt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Frit_pensionsvalg__c</fullName>
        <label>Frit pensionsvalg</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ja</fullName>
                </value>
                <value>
                    <fullName>Nej</fullName>
                </value>
                <value>
                    <fullName>Ved ikke</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Friv_rdi_i_bolig__c</fullName>
        <label>Friværdi i bolig</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GSID__c</fullName>
        <label>GSID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gavekort_1_000_kr_rabat_og_r_dgivning__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Kunden har sat kryds i at de ønsker at give en bekendt et gavekort med 1.000 kr. rabat og gratis rådgivning</description>
        <label>Gavekort - 1.000 kr. rabat og rådgivning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gemensamma_eller_s_rkullbarn__c</fullName>
        <inlineHelpText>If the customer has both, select &quot;särkullbarn&quot;</inlineHelpText>
        <label>Gemensamma eller särkullbarn?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gen_bnet__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Er leadet blevet genåbnet?</description>
        <label>Reopened</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Køn</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Genindl_st__c</fullName>
        <description>Feltet benyttes til at indskrive hvis gamle emner sættes ind igen. Her skrives dato, publisher name og  emnetype i navnet</description>
        <label>Genindlæst</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FBgratisBTmix1609</fullName>
                </value>
                <value>
                    <fullName>FBgratisBTmix28102019</fullName>
                </value>
                <value>
                    <fullName>100120Genindlæstpostmaxcall</fullName>
                </value>
                <value>
                    <fullName>14022020Mix</fullName>
                </value>
                <value>
                    <fullName>Emailkampagne_08-10-2021_2000 kr. gavekort til testamente</fullName>
                </value>
                <value>
                    <fullName>TilmeldtIgenInteresseDublet_21102021</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Got_risk_assessment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Har du få taget en risikovurdering</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Har_Livsforsikring__c</fullName>
        <label>Har Livsforsikring</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ja</fullName>
                </value>
                <value>
                    <fullName>Nej</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Har_accepteret_medlemsbetingelser__c</fullName>
        <label>Har accepteret medlemsbetingelser</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Item #1</fullName>
                </value>
                <value>
                    <fullName>true</fullName>
                </value>
                <value>
                    <fullName>JA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Har_du_I_b_rn__c</fullName>
        <label>Har du/I børn?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Nej</fullName>
                </value>
                <value>
                    <fullName>Ja, sammenbragte børn</fullName>
                </value>
                <value>
                    <fullName>Ja, fælles børn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Har_du_I_eller_en_af_jer_s_reje__c</fullName>
        <label>Har du/I (eller en af jer) særeje?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Har_du_I_f_lles_eller_sammenbragte_b_rn__c</fullName>
        <label>Har du/I fælles eller sammenbragte børn?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Item #1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Har_du_I_fremtidsfuldmagt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Har du/I fremtidsfuldmagt?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Har_du_I_gtepagt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Har du/I ægtepagt?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Har_du_I_nogen_andre_dokumenter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Har du/I nogen andre dokumenter?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Har_du_I_nogle_arvinger__c</fullName>
        <label>Har du/I nogle arvinger?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Har_du_I_testamente__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Har du/I testamente?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Har_du_b_rn_Calendly__c</fullName>
        <label>Har du børn? (Calendly)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enter value</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Har_du_b_rn__c</fullName>
        <label>Har du børn?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Item #1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Har_du_barn__c</fullName>
        <label>Har du barn?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Har_pension__c</fullName>
        <label>Har pension?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ja</fullName>
                </value>
                <value>
                    <fullName>Nej</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_Appointment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Appointment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Children_Under_18__c</fullName>
        <label>Has Children Under 18</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_Event_Suggestions__c</fullName>
        <formula>OR(
   NOT(ISBLANK(Area_Suggestion__c)),
   NOT(ISBLANK(Venue_Suggestion__c))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Event Suggestions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Orderwentthrough__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Handel gået igennem</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Poa__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Har Fremtidsfuldmagt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Prenup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Har ægtepagt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Samejeoverenskomst__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Har Samejeoverenskomst</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_car__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Har bil</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_children__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Har du børn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Have_testament__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Har testamente</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Heir_position__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Taget stilling til hvem der skal arve</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hit_Rate_Lead__c</fullName>
        <formula>IF( ISPICKVAL( Status , &quot;Converted&quot;),&quot;Converted&quot;, IF( ISPICKVAL( Status , &quot;NEW&quot;),&quot;Open&quot;,IF( ISPICKVAL( Status , &quot;Working&quot;),&quot;Open&quot;,&quot;Not converted&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hit Rate Lead</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Host_Address__c</fullName>
        <formula>Lecture_Campaign__r.Host_Address__Street__s  &amp; &quot; &quot; &amp; Lecture_Campaign__r.Host_Address__City__s  &amp; &quot;, &quot; &amp; TEXT(Lecture_Campaign__r.Host_Address__StateCode__s)  &amp; &quot; &quot; &amp; Lecture_Campaign__r.Host_Address__PostalCode__s  &amp; &quot; &quot; &amp;
TEXT(Lecture_Campaign__r.Host_Address__CountryCode__s)</formula>
        <label>Host Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Host_Type__c</fullName>
        <label>Host Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lecture_Host_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>House_size__c</fullName>
        <label>House size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Housing_type__c</fullName>
        <label>Boligforhold</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lejebolig</fullName>
                </value>
                <value>
                    <fullName>Andelsbolig</fullName>
                </value>
                <value>
                    <fullName>Ejer</fullName>
                </value>
                <value>
                    <fullName>Ejerbolig</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hubhus_ID__c</fullName>
        <label>Hubhus ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hubhus_Trigger_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hubhus Trigger Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hubhus_Trigger_Time__c</fullName>
        <label>Hubhus Trigger Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Husdyr__c</fullName>
        <label>Husdyr</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ja</fullName>
                </value>
                <value>
                    <fullName>Nej</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hvad_Oplever_du_som_barriere__c</fullName>
        <label>Hvad Oplever du som barriere</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dårlig kemi med rådgiver</fullName>
                </value>
                <value>
                    <fullName>Forvirring om tilbud/kampagne</fullName>
                </value>
                <value>
                    <fullName>Pris</fullName>
                </value>
                <value>
                    <fullName>Andet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hvem_tilbydes_gratis_fremtidsfuldmagt__c</fullName>
        <label>Hvem tilbydes gratis fremtidsfuldmagt?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Item #1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hvor_mange_ansatte_er_der_i_virksomheden__c</fullName>
        <label>Hvor mange ansatte er der i virksomheden</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Item #1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hvor_mange_b_rn_har_du_I__c</fullName>
        <label>Hvor mange børn har du/I?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Include_Aros_ID_insurance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Aros&apos; ID insurance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Industry_Code__c</fullName>
        <label>Industry Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_pension_type__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Har du forsikringer og pension</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interaction__c</fullName>
        <label>Interaction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Customer_Interaction</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Internal_Calendly_Booking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Internal Calendly Booking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCallableNew__c</fullName>
        <description>Callable leads with status New</description>
        <formula>AND(OR(telegenta__Next_Call_Time__c &lt; NOW(), ISNULL(telegenta__Next_Call_Time__c)),ISPICKVAL(Status, &quot;New&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsCallableNew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCallableWorking__c</fullName>
        <description>Callable leads with status Working</description>
        <formula>AND(OR(telegenta__Next_Call_Time__c &lt; NOW(), ISNULL(telegenta__Next_Call_Time__c)),ISPICKVAL(Status, &quot;Working&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsCallableWorking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCallable__c</fullName>
        <formula>AND(OR(telegenta__Next_Call_Time__c &lt; NOW(), ISNULL(telegenta__Next_Call_Time__c)), OR(ISPICKVAL(Status, &quot;New&quot;),ISPICKVAL(Status, &quot;Working&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsCallableNewWorking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCallout_To_Aros__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCallout To Aros</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Closed__c</fullName>
        <formula>OR(
    ISPICKVAL(Status, &quot;Unqualified&quot;),
    ISPICKVAL(Status, &quot;Converted&quot;),
    ISPICKVAL(Status, &quot;Lost&quot;),
    ISPICKVAL(Status, &quot;Qualified&quot;),
    ISPICKVAL(Status, &quot;Closed - Not Converted&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Created_by_Current_User__c</fullName>
        <formula>CreatedById = $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Created by Current User</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>